force-app/main/default/objects/KTA_Job__c/KTA_Job__c.object-meta.xml
<CustomObject>
    <label>KTA Job</label>
    <nameField>
        <label>KTA Job</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KTA Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>