force-app/main/default/objects/KTA_Job__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>KTA Jobs</relationshipLabel>
    <relationshipName>KTA_Jobs</relationshipName>
    <type>Lookup</type>
</CustomField>