force-app/main/default/objects/KTA_Job__c/fields/Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Document_Id__c</fullName>
    <label>Document Ids</label>
    <length>255</length>
    <type>Text</type>
</CustomField>