force-app/main/default/objects/KTA_Job__c/fields/Folder_Id__c.field-meta.xml
<CustomField>
    <fullName>Folder_Id__c</fullName>
    <label>Folder Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>