force-app/main/default/objects/KTA_Job__c/fields/Kofax_Id__c.field-meta.xml
<CustomField>
    <fullName>Kofax_Id__c</fullName>
    <label>Kofax Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>