force-app/main/default/objects/KTA_Job__c/fields/Request_Input_Variables__c.field-meta.xml
<CustomField>
    <fullName>Request_Input_Variables__c</fullName>
    <label>Request Input Variables</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>