force-app/main/default/objects/KTA_Job__c/fields/Request_Json_body__c.field-meta.xml
<CustomField>
    <fullName>Request_Json_body__c</fullName>
    <label>Request Json body</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>