force-app/main/default/objects/KTA_Job__c/fields/Response_Json__c.field-meta.xml
<CustomField>
    <fullName>Response_Json__c</fullName>
    <label>Response Json</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>