force-app/main/default/objects/KTA_Job__c/fields/Returned_Variables__c.field-meta.xml
<CustomField>
    <fullName>Returned_Variables__c</fullName>
    <label>Returned Variables</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>