force-app/main/default/objects/KTA_Job__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>TotalAgility_Job_Id__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Response_Json__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>